--- a/tuto/docker-compose.yml
+++ b/tuto/docker-compose.yml
@@ -4,12 +4,18 @@ services:
 ### Application Code Container
 
   tuto_application:
+      # name of the container. if you list all running containers using `docker ps` it'll be easier to find
       container_name: tuto_app
-#you can comment out the next line
-      restart: always
+      
+      # if you want your container to start at boot time, uncomment the next line
+      # restart: always
+      
+      # this tells docker to build an image using the Dockerfile in ./server
       build: ./server
+      # and the image name will be tuto/tuto_app
       image: tuto/tuto_app
+      
       ports:
-        # change the local-port
+        # you can change the local-port
         # [local-ip]:[local-port]:[container-port]
         - "127.0.0.1:8080:8080"
